--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ jobs:
       - image: python:3.7.5
     steps:
       - checkout
-      - attach-workspace:
+      - attach_workspace:
           at: workspace
       - run:
           name: Write to workspace
