--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,16 @@ jobs:
   build-and-test:
     docker:
       - image: python:3.7.5
+    parallelism: 2
     steps:
       - checkout
       - attach_workspace:
           at: workspace
       - run:
           name: Write to workspace
-          command: echo foobar > workspace/${CIRCLE_NODE_INDEX}/foobar
+          command: |
+            mkdir -p workspace/${CIRCLE_NODE_INDEX}
+            echo foobar > workspace/${CIRCLE_NODE_INDEX}/foobar
       - deploy:
           name: Collect Results
           command: |
